manifests/overlays/dev/webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: webapp-php
          image: webapp-php:hogehoge
          imagePullPolicy: Never
        - name: webapp-nginx
          image: webapp-nginx:hogehoge
          imagePullPolicy: Never
